# pswd-manager-rust

./: .gitignore  Cargo.toml  DISTRIBUTION_GUIDE.md  distribute.sh  serve.py
.github/workflows/: release.yml
PasswordManagerMobile/: App.tsx  README.md
PasswordManagerMobile/src/components/: NestedCard.tsx
PasswordManagerMobile/src/context/: AuthContext.tsx  ThemeContext.tsx  VaultContext.tsx
PasswordManagerMobile/src/navigation/: AppNavigator.tsx
PasswordManagerMobile/src/screens/: AddEntryScreen.tsx  DebugScreen.tsx  LoginScreen.tsx  PasswordGeneratorScreen.tsx  RegisterScreen.tsx  UnlockScreen.tsx  VaultScreen.tsx
PasswordManagerMobile/src/theme/: warmTheme.ts
PasswordManagerMobile/src/types/: index.ts
PasswordManagerMobile/src/utils/: crypto.ts  storage.ts
src/: auth.rs  crypto.rs  gui.rs  main.rs  security.rs
src/gui/: app.rs  auth_window.rs  password_generator.rs  vault_window.rs
