[package]
name = "password_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
argon2 = "0.5"
base64 = "0.22"
rpassword = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = "1.7"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

